# weekend-project

./: README.md
backend/microservice-integration-language/starea/: pom.xml
backend/mocking-generation/: README.md
backend/mocking-generation/dyce/: .gitignore  AddressService.java  App.java  README.md
backend/mocking-generation/starea/: pom.xml
backend/query-language/: pom.xml
backend/remote-development/: README.md  pom.xml
backend/remote-development/base-executor/: README.md  pom.xml
backend/rust-cli/: test.json
backend/rust-cli/src/: main.rs
backend/server-for-mil/: .gitignore  README.md  pom.xml
backend/socket-programming/: README.md
docs/writing/clean-code/: CLEANCODE.md
frontend/math-graphics/: Cargo.toml
frontend/math-graphics/src/: main.rs
frontend/remote-development/: README.md  angular.json  package-lock.json  package.json
frontend/remote-development/src/: index.html
frontend/rust-graphics/: Cargo.toml  package-lock.json
frontend/rust-graphics/src/: lib.rs  main.rs
frontend/rust-graphics/www/: index.html  index.js  package-lock.json  package.json
frontend/visualize-sort/ori/: index.css  (+2 more)
math_ai/ai_lib_free/: Cargo.toml  LICENSE_MIT
math_ai/ai_lib_free/src/: lib.rs
math_ai/ai_lib_free/www/: index.js  package-lock.json  package.json  webpack.config.js
solve-problem/coding-game/: CodingGame4.java  CodingGame5.java  README.md
solve-problem/filter-elements/: NganFilterElements.java
solve-problem/java-wproj/: pom.xml
solve-problem/rust-wproj/: Cargo.toml
system-programming/learn-rust-cmd/: Cargo.toml  README.md
(+168 files in other folders)
