[package]
name = "ai_lib_free"
version = "0.1.0"
authors = ["Thinh Le <thinhle2199@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
bytemuck = "1.21.0"
wgpu = "24.0.1"
log = "0.4.25"
console_log = "1.0.0"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.50"
flume = "0.11.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

